第二次提交
第二次提交

--- a/clarisonice/index.html
+++ b/clarisonice/index.html
@@ -13,10 +13,10 @@
 <body class="index">
 <div class="warpIndex">
 	<div class="tit"><img src="images/tit.png" title="任务链接获取专区" alt="任务链接获取专区" width="100%"></div>
-    <div class="name"><input type="text" id="username"></div>
+    <div class="name"><input type="text" id="username" value="请输入您的名字"></div>
     <div id="submitBtn">点击此按钮获取任务链接</div>
     <div id="url"></div>
-    <span class="notice"><img src="images/notice.png" title="点击您的专属链接并分享至您的朋友圈中" alt="点击您的专属链接并分享至您的朋友圈中" width="100%" /></span>
+    <span class="notice"><p>点击链接进入领取任务并把任务分享到朋友圈</p></span>
 </div>
 </body>
 </html>
