--- a/clarisonice/shake.html
+++ b/clarisonice/shake.html
@@ -12,9 +12,11 @@
 </head>
 
 <body class="shareBody">
+<audio id="shakesound" src="images/shake_sound.mp3">
+	您的浏览器不支持 audio 标签。
+	</audio>
 <div id="shake">
 	<div class="tips"></div>
-
 </div>
 </body>
 </html>
