--- a/clarisonice/index.html
+++ b/clarisonice/index.html
@@ -13,10 +13,16 @@
 <body class="index">
 <div class="warpIndex">
 	<div class="tit"><img src="images/tit.png" title="任务链接获取专区" alt="任务链接获取专区" width="100%"></div>
-    <div class="name"><input type="text" id="username" value="请输入您的名字"></div>
+    <div class="name"><input type="text" id="username" value="请输入您的真实姓名"></div>
     <div id="submitBtn">点击此按钮获取任务链接</div>
     <div id="url"></div>
     <span class="notice"><p>点击链接进入领取任务并把任务分享到朋友圈</p></span>
 </div>
+<span style="display:none">
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F74b82234e53cd802a2579f0179d691f7' type='text/javascript'%3E%3C/script%3E"));
+</script>
+ </span>
 </body>
 </html>
