--- a/clarisonice/info.html
+++ b/clarisonice/info.html
@@ -24,10 +24,10 @@
 	<div class="code2_con">
     	<div class="code2_conLeft"><img src="images/pro2.jpg" width="100%"></div>
     	<div class="code2_conRight">
-        	<a class="login"><img src="images/login.jpg" width="100%"></a>
+        	<a class="login"><img src="images/title.jpg" width="100%"></a>
         	<img src="images/pro2word.jpg" width="100%">
         	<span class="codetxt2">ASD</span>
-            <a class="search2"><img src="images/searchBg3.jpg" width="100%"></a>
+            <a class="search2"><img src="images/searchBg2.jpg" width="100%"></a>
             <!--<div class="search"><input type="text" id="searchtxt" placeholder="详情搜索兰蔻"><input type="button" id="searchrbtn"></div>-->
         </div>
     </div>    
