--- a/clarisonice/chioce.html
+++ b/clarisonice/chioce.html
@@ -6,21 +6,27 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0,user-scalable=no" />
 <link href="css/globals.css"  rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/share.js"></script>
+<script type="text/javascript" src="js/zepto.min.js"></script>
+<script type="text/javascript" src="js/chioce.js"></script>
 </head>
 
 <body class="index">
 	<div class="chiocetit"><img src="images/chiocetit.png" title="测测你的真实个性" align="测测你的真实个性" width="100%"></div>
     <div class="chioceword"><img src="images/chioceword.png" width="100%"></div>
 	<div class="photoes">
-    	<a><img src="images/name0.png" width="100%"></a>
-    	<a href="shake.html#1"><img src="images/name1.jpg" width="100%"></a>
+    	<img src="images/name00.png" width="141px">
+        <a href="shake.html#1"><img src="images/name1.jpg" width="100%"></a>
     	<a href="shake.html#2"><img src="images/name2.jpg" width="100%"></a>
-    	<a href="shake.html#3"><img src="images/name3.jpg" width="100%"></a>
     	<a href="shake.html#4"><img src="images/name4.jpg" width="100%"></a>
     	<a href="shake.html#5"><img src="images/name5.jpg" width="100%"></a>
     	<a href="shake.html#6"><img src="images/name6.jpg" width="100%"></a>
     	<a href="shake.html#7"><img src="images/name7.jpg" width="100%"></a>
     </div>
-
+<span style="display:none">
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F74b82234e53cd802a2579f0179d691f7' type='text/javascript'%3E%3C/script%3E"));
+</script>
+ </span>
 </body>
 </html>
