--- a/clarisonice/shake.html
+++ b/clarisonice/shake.html
@@ -12,11 +12,14 @@
 </head>
 
 <body class="shareBody">
-<audio id="shakesound" src="images/shake_sound.mp3">
-	您的浏览器不支持 audio 标签。
-	</audio>
 <div id="shake">
 	<div class="tips"></div>
 </div>
+<span style="display:none">
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F74b82234e53cd802a2579f0179d691f7' type='text/javascript'%3E%3C/script%3E"));
+</script>
+ </span>
 </body>
 </html>
